Intermittent ==14518==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000000 (pc 0x7f3a217497b6 bp 0x7f3962574340 sp 0x7f3962574320 T83)
Categories
(Core :: Widget: Gtk, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox108 | --- | unaffected |
firefox109 | --- | unaffected |
firefox110 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jstutte)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: sstanca [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=399441352&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/XyxJTr-LSK-OPsGsZJnJKQ/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/XyxJTr-LSK-OPsGsZJnJKQ/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - addBlocker@resource://gre/modules/AsyncShutdown.jsm:523:26
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - addBlocker@resource://gre/modules/AsyncShutdown.jsm:462:15
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - setupShutdown@resource://gre/modules/osfile/osfile_async_front.jsm:1548:28
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - @resource://gre/modules/osfile/osfile_async_front.jsm:1568:16
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - @resource://gre/modules/osfile.jsm:12:30
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - @resource://gre/modules/TelemetryStorage.jsm:19:28
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - getShutdownState@resource://gre/modules/TelemetrySend.jsm:1692:7
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - getShutdownState@resource://gre/modules/TelemetrySend.jsm:374:30
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - _getState@resource://gre/modules/TelemetryControllerParent.jsm:1058:38
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - setupTelemetry/<@resource://gre/modules/TelemetryControllerParent.jsm:917:18
[task 2022-12-13T07:55:53.776Z] 07:55:53 INFO - safeGetState@resource://gre/modules/AsyncShutdown.jsm:254:17
[task 2022-12-13T07:55:53.777Z] 07:55:53 INFO - Barrier/_internalAddBlocker/promise<@resource://gre/modules/AsyncShutdown.jsm:773:20
[task 2022-12-13T07:55:53.777Z] 07:55:53 INFO - observe@resource://gre/modules/AsyncShutdown.jsm:572:16
[task 2022-12-13T07:55:53.778Z] 07:55:53 INFO - WARNING: Error: Phase "profile-before-change" is finished, it is too late to register completion condition "OS.File: flush I/O queued before profileBeforeChange"
[task 2022-12-13T07:55:53.782Z] 07:55:53 INFO - WARNING: addBlocker@resource://gre/modules/AsyncShutdown.jsm:718:15
[task 2022-12-13T07:55:53.782Z] 07:55:53 INFO - addBlocker@resource://gre/modules/AsyncShutdown.jsm:523:26
[task 2022-12-13T07:55:53.783Z] 07:55:53 INFO - addBlocker@resource://gre/modules/AsyncShutdown.jsm:462:15
[task 2022-12-13T07:55:53.784Z] 07:55:53 INFO - setupShutdown@resource://gre/modules/osfile/osfile_async_front.jsm:1548:28
[task 2022-12-13T07:55:53.784Z] 07:55:53 INFO - @resource://gre/modules/osfile/osfile_async_front.jsm:1568:16
[task 2022-12-13T07:55:53.785Z] 07:55:53 INFO - @resource://gre/modules/osfile.jsm:12:30
[task 2022-12-13T07:55:53.786Z] 07:55:53 INFO - @resource://gre/modules/TelemetryStorage.jsm:19:28
[task 2022-12-13T07:55:53.787Z] 07:55:53 INFO - removeAbortedSessionPing@resource://gre/modules/TelemetryControllerParent.jsm:721:5
[task 2022-12-13T07:55:53.789Z] 07:55:53 INFO - removeAbortedSessionPing@resource://gre/modules/TelemetryControllerParent.jsm:249:17
[task 2022-12-13T07:55:53.790Z] 07:55:53 INFO - shutdownChromeProcess/cleanup/<@resource://gre/modules/TelemetrySession.jsm:1235:42
[task 2022-12-13T07:55:53.791Z] 07:55:53 INFO - observe@resource://gre/modules/AsyncShutdown.jsm:572:16
[task 2022-12-13T07:55:53.797Z] 07:55:53 INFO - JavaScript error: resource://gre/modules/AsyncShutdown.jsm, line 718: Error: Phase "profile-before-change" is finished, it is too late to register completion condition "OS.File: flush I/O queued before profileBeforeChange"
[task 2022-12-13T07:55:53.798Z] 07:55:53 INFO - JavaScript error: resource://gre/modules/AsyncShutdown.jsm, line 718: Error: Phase "profile-before-change" is finished, it is too late to register completion condition "OS.File: flush I/O queued before profileBeforeChange"
[task 2022-12-13T07:55:53.800Z] 07:55:53 INFO - JavaScript error: resource://gre/modules/AsyncShutdown.jsm, line 718: Error: Phase "profile-before-change" is finished, it is too late to register completion condition "OS.File: flush I/O queued before profileBeforeChange"
[task 2022-12-13T07:55:53.801Z] 07:55:53 INFO - JavaScript error: resource://gre/modules/AsyncShutdown.jsm, line 718: Error: Phase "profile-before-change" is finished, it is too late to register completion condition "OS.File: flush I/O queued before profileBeforeChange"
[task 2022-12-13T07:55:53.803Z] 07:55:53 INFO - JavaScript error: resource://gre/modules/AsyncShutdown.jsm, line 718: Error: Phase "profile-before-change" is finished, it is too late to register completion condition "OS.File: flush I/O queued before profileBeforeChange"
[task 2022-12-13T07:55:53.805Z] 07:55:53 INFO - JavaScript error: resource://gre/modules/AsyncShutdown.jsm, line 718: Error: Phase "profile-before-change" is finished, it is too late to register completion condition "OS.File: flush I/O queued before profileBeforeChange"
[task 2022-12-13T07:55:53.913Z] 07:55:53 INFO - AddressSanitizer:DEADLYSIGNAL
[task 2022-12-13T07:55:53.915Z] 07:55:53 INFO - =================================================================
[task 2022-12-13T07:55:53.916Z] 07:55:53 ERROR - ==14518==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000000 (pc 0x7f3a217497b6 bp 0x7f3962574340 sp 0x7f3962574320 T83)
[task 2022-12-13T07:55:53.916Z] 07:55:53 INFO - ==14518==The signal is caused by a READ memory access.
[task 2022-12-13T07:55:53.917Z] 07:55:53 INFO - ==14518==Hint: address points to the zero page.
[task 2022-12-13T07:55:55.051Z] 07:55:55 INFO - #0 0x7f3a217497b6 in mozilla::nsAvailableMemoryWatcher::StartPolling(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/base/AvailableMemoryWatcherLinux.cpp:248:13
[task 2022-12-13T07:55:55.052Z] 07:55:55 INFO - #1 0x7f3a2174ab96 in mozilla::nsAvailableMemoryWatcher::MaybeHandleHighMemory() /builds/worker/checkouts/gecko/xpcom/base/AvailableMemoryWatcherLinux.cpp:229:3
[task 2022-12-13T07:55:55.053Z] 07:55:55 INFO - #2 0x7f3a217835a4 in operator() /builds/worker/checkouts/gecko/xpcom/base/AvailableMemoryWatcherLinux.cpp:184:17
[task 2022-12-13T07:55:55.055Z] 07:55:55 INFO - #3 0x7f3a217835a4 in mozilla::detail::RunnableFunction<mozilla::nsAvailableMemoryWatcher::Notify(nsITimer*)::$_1>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:546:5
[task 2022-12-13T07:55:55.055Z] 07:55:55 INFO - #4 0x7f3a2198d5f2 in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1198:16
[task 2022-12-13T07:55:55.057Z] 07:55:55 INFO - #5 0x7f3a21997564 in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:474:10
[task 2022-12-13T07:55:55.060Z] 07:55:55 INFO - #6 0x7f3a22f74719 in mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) /builds/worker/checkouts/gecko/ipc/glue/MessagePump.cpp:330:5
[task 2022-12-13T07:55:55.060Z] 07:55:55 INFO - #7 0x7f3a22e14287 in RunInternal /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:381:10
[task 2022-12-13T07:55:55.061Z] 07:55:55 INFO - #8 0x7f3a22e14287 in RunHandler /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:374:3
[task 2022-12-13T07:55:55.061Z] 07:55:55 INFO - #9 0x7f3a22e14287 in MessageLoop::Run() /builds/worker/checkouts/gecko/ipc/chromium/src/base/message_loop.cc:356:3
[task 2022-12-13T07:55:55.062Z] 07:55:55 INFO - #10 0x7f3a21984ed3 in nsThread::ThreadFunc(void*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:383:10
[task 2022-12-13T07:55:55.063Z] 07:55:55 INFO - #11 0x7f3a4a361fe8 in _pt_root /builds/worker/checkouts/gecko/nsprpub/pr/src/pthreads/ptthread.c:201:5
[task 2022-12-13T07:55:55.064Z] 07:55:55 INFO - #12 0x7f3a4a08c6da in start_thread /tmp/glibc/nptl/pthread_create.c:463
[task 2022-12-13T07:55:55.065Z] 07:55:55 INFO - #13 0x7f3a48e4fa3e in __clone /tmp/glibc/misc/../sysdeps/unix/sysv/linux/x86_64/clone.S:95
[task 2022-12-13T07:55:55.067Z] 07:55:55 INFO - AddressSanitizer can not provide additional info.
[task 2022-12-13T07:55:55.068Z] 07:55:55 INFO - SUMMARY: AddressSanitizer: SEGV /builds/worker/checkouts/gecko/xpcom/base/AvailableMemoryWatcherLinux.cpp:248:13 in mozilla::nsAvailableMemoryWatcher::StartPolling(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&)
[task 2022-12-13T07:55:55.069Z] 07:55:55 INFO - Thread T83 (MemoryPoller) created by T0 here:
[task 2022-12-13T07:55:55.262Z] 07:55:55 INFO - #0 0x55bc2b2d464c in __interceptor_pthread_create /builds/worker/fetches/llvm-project/compiler-rt/lib/asan/asan_interceptors.cpp:208:3
[task 2022-12-13T07:55:55.263Z] 07:55:55 INFO - #1 0x7f3a4a3520b9 in _PR_CreateThread /builds/worker/checkouts/gecko/nsprpub/pr/src/pthreads/ptthread.c:458:14
[task 2022-12-13T07:55:55.264Z] 07:55:55 INFO - #2 0x7f3a4a34352e in PR_CreateThread /builds/worker/checkouts/gecko/nsprpub/pr/src/pthreads/ptthread.c:533:12
[task 2022-12-13T07:55:55.267Z] 07:55:55 INFO - #3 0x7f3a219883db in nsThread::Init(nsTSubstring<char> const&) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:617:18
[task 2022-12-13T07:55:55.267Z] 07:55:55 INFO - #4 0x7f3a2199523e in nsThreadManager::NewNamedThread(nsTSubstring<char> const&, unsigned int, nsIThread**) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadManager.cpp:539:12
[task 2022-12-13T07:55:55.273Z] 07:55:55 INFO - #5 0x7f3a219a16fa in NS_NewNamedThread(nsTSubstring<char> const&, nsIThread**, already_AddRefed<nsIRunnable>, unsigned int) /builds/worker/checkouts/gecko/xpcom/threads/nsThreadUtils.cpp:170:57
[task 2022-12-13T07:55:55.273Z] 07:55:55 INFO - #6 0x7f3a2174949b in NS_NewNamedThread<13UL> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:85:10
[task 2022-12-13T07:55:55.274Z] 07:55:55 INFO - #7 0x7f3a2174949b in mozilla::nsAvailableMemoryWatcher::Init() /builds/worker/checkouts/gecko/xpcom/base/AvailableMemoryWatcherLinux.cpp:84:8
[task 2022-12-13T07:55:55.275Z] 07:55:55 INFO - #8 0x7f3a21747d73 in mozilla::CreateAvailableMemoryWatcher() /builds/worker/checkouts/gecko/xpcom/base/AvailableMemoryWatcherLinux.cpp:104:7
[task 2022-12-13T07:55:55.275Z] 07:55:55 INFO - #9 0x7f3a21747af2 in mozilla::nsAvailableMemoryWatcherBase::GetSingleton() /builds/worker/checkouts/gecko/xpcom/base/AvailableMemoryWatcher.cpp:49:18
[task 2022-12-13T07:55:55.279Z] 07:55:55 INFO - #10 0x7f3a218edc4b in mozilla::xpcom::CreateInstanceImpl(mozilla::xpcom::ModuleID, nsID const&, void**) /builds/worker/workspace/obj-build/xpcom/components/StaticComponents.cpp:10540:60
[task 2022-12-13T07:55:55.279Z] 07:55:55 INFO - #11 0x7f3a21933927 in CreateInstance /builds/worker/checkouts/gecko/xpcom/components/nsComponentManager.cpp:184:46
[task 2022-12-13T07:55:55.280Z] 07:55:55 INFO - #12 0x7f3a21933927 in nsComponentManagerImpl::GetServiceLocked(mozilla::Maybe<mozilla::detail::BaseMonitorAutoLock<mozilla::Monitor>>&, (anonymous namespace)::EntryWrapper&, nsID const&, void**) /builds/worker/checkouts/gecko/xpcom/components/nsComponentManager.cpp:975:17
[task 2022-12-13T07:55:55.281Z] 07:55:55 INFO - #13 0x7f3a21935727 in nsComponentManagerImpl::GetServiceByContractID(char const*, nsID const&, void**) /builds/worker/checkouts/gecko/xpcom/components/nsComponentManager.cpp:1164:10
[task 2022-12-13T07:55:55.281Z] 07:55:55 INFO - #14 0x7f3a2322c137 in xpc::CIGSHelper(JSContext*, unsigned int, JS::Value*, bool) /builds/worker/checkouts/gecko/js/xpconnect/src/XPCJSID.cpp:585:10
[task 2022-12-13T07:55:55.282Z] 07:55:55 INFO - #15 0x7f3a300396ff in CallJSNative /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:459:13
[task 2022-12-13T07:55:55.283Z] 07:55:55 INFO - #16 0x7f3a300396ff in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:547:12
[task 2022-12-13T07:55:55.284Z] 07:55:55 INFO - #17 0x7f3a300287fa in InternalCall /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:614:10
[task 2022-12-13T07:55:55.284Z] 07:55:55 INFO - #18 0x7f3a300287fa in CallFromStack /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:619:10
[task 2022-12-13T07:55:55.285Z] 07:55:55 INFO - #19 0x7f3a300287fa in Interpret(JSContext*, js::RunState&) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:3379:16
[task 2022-12-13T07:55:55.285Z] 07:55:55 INFO - #20 0x7f3a3000c8ac in js::RunScript(JSContext*, js::RunState&) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:431:13
[task 2022-12-13T07:55:55.286Z] 07:55:55 INFO - #21 0x7f3a3003982a in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) /builds/worker/checkouts/gecko/js/src/vm/Interpreter.cpp:579:13
Assignee | ||
Comment 1•2 years ago
|
||
Now that we process the remaining events, we can find mTimer
to be nullptr
and need to check for it.
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 2•2 years ago
|
||
Updated•2 years ago
|
Comment 4•2 years ago
|
||
Set release status flags based on info from the regressing bug 1805147
Comment 5•2 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 8•2 years ago
|
||
(In reply to Intermittent Failures Robot from comment #7)
1 failures in 3643 pushes (0.0 failures/push) were associated with this bug in the last 7 days.
Repository breakdown:
- mozilla-release: 1
Platform and build breakdown:
- linux1804-64-asan-qr: 1
- opt: 1
For more details, see:
https://treeherder.mozilla.org/intermittent-failures/bugdetails?bug=1805368&startday=2023-02-20&endday=2023-02-26&tree=all
This instance seems totally unrelated. If ever, it points to bug 751336 ?
Description
•