Bug 1805368 - Always check mTimer before using it. r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D164552